fixing selector panorama

--- a/examples/visual effects/panorama/style.css
+++ b/examples/visual effects/panorama/style.css
@@ -10,7 +10,7 @@
   margin-left: 200px;
 }
 
-.panorama:hover, .panrama:focus{
+.panorama:hover, .panorama:focus{
   animation-play-state: running;
 }
 
